--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -26,7 +26,7 @@
 		background: $light-grey;
 		width: 0;
 		top: 60px;
-		right: 0;
+		right: -500px;
 		bottom: 0;
 		height: calc(100vh - 60px);
 		display: flex;
@@ -37,7 +37,8 @@
     z-index: 100;
 		&--visible {
 			width: 100%;
-			opacity: 1;
+      opacity: 1;
+      right: 0;
 		}
   }
 }
@@ -97,8 +98,9 @@
       padding: 20px;
       z-index: 40;
       opacity: 0;
-      background: $grey-blue;
+      background: $white;
       visibility: hidden;
+      box-shadow: -1px -3px 21px 2px rgba(0,0,0,0.57);
       &:before {
         content: '';
         position: absolute;
@@ -107,11 +109,12 @@
         height: 0; 
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
-        border-bottom: 5px solid $grey-blue;
+        border-bottom: 5px solid $white;
       }
       li {
         font-weight: normal;
         pointer-events: all;
+        font-family: $montserrat;
       }
     }
     &:after {
@@ -159,8 +162,6 @@
   }
   .header {
     height: 100px;
-    // max-width: 1200px;
-    // margin: 0 auto;
     padding: 0 7%;
     background: transparent;
     &__hamburger-wrapp {
@@ -173,6 +174,7 @@
       height: auto;
       opacity: 1;
       background: transparent;
+      right: 0;
     }
   }
 }
@@ -182,10 +184,6 @@
     max-width: 1440px;
     margin: 0 auto;
     padding: 0;
+    
   }
 }
-// @include desktop-xlg() {
-//   .header {
-//     // max-width: 1920px;
-//   }
-// }
