--- a/assets/sass/components/_video.scss
+++ b/assets/sass/components/_video.scss
@@ -46,8 +46,7 @@
   .video-section {
     video {
       position: relative;
-      height: 100vh;
-      // margin-top: -60px;
+      height: calc(100vh - 100px);
       display: flex;
       align-items: center;
       justify-content: center;
