--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -1,6 +1,14 @@
 .header {
   background: $light-grey;
 }
+#header-logo {
+  position: absolute;
+  top: 0px;
+  width: 100px;
+  height: 40px;
+  display: flex;
+  z-index: 1000;
+}
 .header {
   height: 60px;
   width: 100%;
