gallery is done

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -34,7 +34,7 @@
 		background: $light-grey;
 		width: 0;
 		top: 60px;
-		right: -500px;
+		right: 0;
 		bottom: 0;
 		height: calc(100vh - 60px);
 		display: flex;
