animation for mobile

--- a/assets/sass/components/_menu.scss
+++ b/assets/sass/components/_menu.scss
@@ -39,7 +39,12 @@
     }
   }
 }
-
+.menu {
+  display: none;
+}
+.open-menu {
+  display: block;
+}
 @include desktop() {
 .hamburger {
   display: none;
