--- a/assets/sass/components/_image-with-title.scss
+++ b/assets/sass/components/_image-with-title.scss
@@ -74,6 +74,10 @@
     }
     &__link {     
       height: 100%;
+      transition: 0.4s;
+      &:hover {
+        transform: scale(1.2);
+      }
     }
   }
 }
