single article is done

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -37,4 +37,5 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/testimonials',
 	'components/modal',
 	'components/site-animation',
+	'components/single-article',
 	'components/image-with-title';
