--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -36,6 +36,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/team',
 	'components/testimonials',
 	'components/modal',
+	'components/news',
 	'components/site-animation',
 	'components/single-article',
 	'components/image-with-title';
