slider on half way

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -27,6 +27,7 @@ and Eric Meyer http://meyerweb.com/eric/tools/css/reset/.
 	'components/bio',
 	'components/info',
 	'components/press',
+	'components/articles-slider',
 	'components/project-hero',
 	'components/project-about',
 	'components/video',
