--- a/assets/sass/components/_news.scss
+++ b/assets/sass/components/_news.scss
@@ -4,25 +4,47 @@
     flex-flow: column;
     padding: 20px;
   }
-  &__single {
-    // widows: ;
-  }
+ 
   &__image {
     width: 100%;
     height: 300px;
-    margin-bottom: 20px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
   }
-  h2 {
-    margin-bottom: 40px;
+  h3 {
+    position: relative;
+    font-family: $raleway-black;
+    text-transform: uppercase;
   }
   &__content {
     margin-bottom: 40px;
+    p {
+      line-height: 30px;
+      margin-bottom: 4px;
+    }
   }
+  &__link {
+    // float: right;
+    position: absolute;
+    right: 30px;
+    bottom: 40px;
+    color: #080877;
+    font-family: $raleway-bold;
+    cursor: pointer;
+  }
+  &__single {
+    margin-bottom: 30px;
+  }
+  &__content-wrapp {
+    position: relative;
+    background: $white;
+    padding: 40px 30px;
+    box-shadow: 10px 10px 42px -8px rgba(0,0,0,0.68);
 
+  }
 }
+
 @include tablet() {
   .news {
     &__wrapper {
@@ -41,14 +63,37 @@
       max-width: 1440px;
       margin: 0 auto;
     }
-    a {
-      width: 32%;
+    &__content {
+      max-height: 520px;
+    }
+    &__content-wrapp {
+      padding: 30px;
+      max-height: 520px;
+      height: 100%;
+      overflow: hidden;
     }
     &__single {
-    }  
+      width: 32%;
+      height: 820px;
+      margin-bottom: 40px;
+    }
+    &__link {
+      bottom: 30px;
+    }
+    &__image {
+      transition: 0.4s;
+      &:hover {
+        transform: scale(1.2);
+      }
+    }
+    &__image-wrapp {
+      width: 100%;
+      height: 300px;
+     overflow: hidden;
+    }
   }
-  
 }
+
 @include desktop-lg() {
   .news {
     &__wrapper {
