--- a/assets/sass/components/_articles-slider.scss
+++ b/assets/sass/components/_articles-slider.scss
@@ -1,42 +1,146 @@
 .articles-slider {
+  position: relative;
   &__wrapper {
     position: relative;
+    width: 100vw;
+    height: 60vh;
     display: flex;
     flex-flow: row;
     overflow-x: hidden;
-    margin-top: 100px;
+    // margin-top: 100px;
+    &:first-child() {
+      opacity: 1;
+    }
   }
   &__slider {
-    min-width: 100%;
+    min-width: 100vw;
     height: 60vh;
-    position: relative;
+    position: absolute;
     display: flex;
     flex-flow: column;
     justify-content: flex-start;
     transition: 1s;
+    opacity: 0;
+    &:nth-of-type(1) {
+      opacity: 1;
+    }
+    
   }
   &__image {
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+  }
+  &__image-overlay {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     height: 100%;
+    display: block;
+    background: rgba(0,0,0, 0.6);
   }
   &__slide {
     position: absolute;
     bottom: 35px;
-    border: solid black;
+    border: solid $white;
     border-width: 0 4px 4px 0;
     display: inline-block;
     padding: 8px;
     cursor: pointer;
   }
-  &__prev {
-    left: 30%;
-    transform: rotate(135deg);
-
+  &__title {
+    max-width: 80%;
+    margin: 0 auto;
+    font-size: 34px;
+    font-family: $raleway-bold;
+    text-transform: uppercase;
+    color: $white;
+    text-align: center;
+    z-index: 10;
+    margin-bottom: 30px;
+  }
+  &__content {
+    max-width: 80%;
+    margin: 0 auto 26px;
+    text-align: center;
+    color: $white;
+    z-index: 10;
   }
   &__next {
     transform: rotate(-45deg);
-    right: 30%;
+    right: 10%;
+  }
+  &__link {
+    width: 50%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: $blue;
+    color: $white;
+    border-radius: 5px;
+    font-family: $raleway-bold;
+    text-transform: uppercase;
+    z-index: 10;
+    cursor: pointer;
+  }
+}
+
+@include tablet() {
+  .articles-slider {
+    &__title {
+      max-width: 60%;
+      font-size: 42px;
+      margin-bottom: 50px;
+    }
+    &__content {
+      max-width: 60%;
+      p {
+        font-size: 20px;
+      }
+    }
+    &__link {
+      max-width: 200px;
+    }
+  }
+}
+
+@include desktop() {
+  .articles-slider {
+    &__wrapper {
+      height: calc( 100vh - 100px);
+
+    }
+    &__slider {
+      height: calc( 100vh - 100px);
+
+    }
+    &__image {
+      align-items: flex-start;
+      justify-content: flex-end;
+    }
+    &__title, &__content {
+      margin: 0 60px 60px;
+      text-align: left;
+    }
+
+    &__title {
+      margin-bottom: 20px;
+    }
+    &__slide {
+      right: 60px;
+      bottom: 50%;
+    } 
+    &__link {
+      margin-left: 60px;
+      margin-bottom: 100px;
+    }   
   }
 }
