--- a/assets/sass/components/_articles-slider.scss
+++ b/assets/sass/components/_articles-slider.scss
@@ -56,6 +56,7 @@
     cursor: pointer;
   }
   &__title {
+    position: relative;
     max-width: 80%;
     margin: 0 auto;
     font-size: 34px;
@@ -65,19 +66,25 @@
     text-align: center;
     z-index: 10;
     margin-bottom: 30px;
+    opacity: 1;
+    
   }
   &__content {
+    position: relative;
     max-width: 80%;
     margin: 0 auto 26px;
     text-align: center;
     color: $white;
     z-index: 10;
+    // transition: 0.5s;
+   
   }
   &__next {
     transform: rotate(-45deg);
     right: 10%;
   }
   &__link {
+    position: relative;
     width: 50%;
     height: 50px;
     display: flex;
@@ -92,7 +99,33 @@
     cursor: pointer;
   }
 }
+.title-animation {
+  animation-name: animate-content;
+  animation-duration: 0.8s;
+}
+.content-animation {
+  animation-name: animate-button;
+  animation-duration: 1s;
+}
 
+@keyframes animate-content {
+  from {
+    top: -60px;
+    opacity: 0;
+  }
+  to { 
+    top: 0px;
+    opacity: 1;  
+  }
+}
+@keyframes animate-button {
+  from {
+    bottom: -60px;
+  }
+  to {
+    bottom: 0;
+  }
+}
 @include tablet() {
   .articles-slider {
     &__title {
@@ -110,6 +143,7 @@
       max-width: 200px;
     }
   }
+  
 }
 
 @include desktop() {
@@ -134,6 +168,10 @@
     &__title {
       margin-bottom: 20px;
     }
+    &__content {
+      animation-duration: 0.8s;
+
+    }
     &__slide {
       right: 60px;
       bottom: 50%;
@@ -142,5 +180,23 @@
       margin-left: 60px;
       margin-bottom: 100px;
     }   
+  }
+  @keyframes animate-content {
+    from {
+      left: -160px;
+      opacity: 0;
+    }
+    to { 
+      left: 0px;
+      opacity: 1;  
+    }
+  }
+  @keyframes animate-button {
+    from {
+      left: -160px;
+    }
+    to {
+      left: 0;
+    }
   }
 }
