slider need to be done

--- a/assets/sass/components/_info.scss
+++ b/assets/sass/components/_info.scss
@@ -24,7 +24,8 @@
     }
     }
     &-link {
-      display: flex;
+      // display: flex;
+      display: none;
       align-items: center;
       width: 100%;
       font-size: 18px;
