--- a/assets/sass/components/_menu.scss
+++ b/assets/sass/components/_menu.scss
@@ -42,6 +42,16 @@
 .menu {
   display: none;
 }
+#menu-item-111,
+#menu-item-110 {
+  &:hover {
+    pointer-events: all;
+  }
+  &:active {
+    pointer-events: none;
+
+  }
+}
 .open-menu {
   display: block;
 }
