--- a/assets/sass/components/_project-about.scss
+++ b/assets/sass/components/_project-about.scss
@@ -25,6 +25,11 @@
       }
     }
   }
+  iframe {
+    max-width: 100%;
+    margin: 0 auto;
+    display: block;
+  }
 }
 
 @include desktop() {
@@ -48,6 +53,18 @@
           columns: 2 300px;
           column-gap: 25px;
         }
+      }
+    }
+    &__trailer {
+      display: flex;
+      position: relative;
+      h2 {
+        position: absolute;
+        top: 45%;
+        left: 5%;
+      }
+      iframe {
+        margin: 0 0 0 380px;
       }
     }
   }
