--- a/assets/sass/components/_articles-slider.scss
+++ b/assets/sass/components/_articles-slider.scss
@@ -14,7 +14,7 @@
   }
   &__slider {
     min-width: 100vw;
-    height: 60vh;
+    height: 60vh !important;
     position: absolute;
     display: flex;
     flex-flow: column;
