--- a/assets/slick/slick-theme.css
+++ b/assets/slick/slick-theme.css
@@ -97,7 +97,16 @@
 
 .slick-next
 {
-    right: -25px;
+    position: absolute;
+    /* bottom: 35px; */
+    border: solid #fff;
+    border-width: 0 4px 4px 0;
+    display: inline-block;
+    padding: 8px;
+    cursor: pointer;
+    transform: rotate(-45deg);
+    right: 10%;
+    top: 90%;
 }
 [dir='rtl'] .slick-next
 {
@@ -106,7 +115,7 @@
 }
 .slick-next:before
 {
-    content: '→';
+    display: none;
 }
 [dir='rtl'] .slick-next:before
 {
@@ -201,4 +210,11 @@
 {
     opacity: .75;
     color: black;
+}
+
+@media screen and (min-width: 1200px) {
+    .slick-next {
+        right: 5%;
+        top: 60%;
+    }    
 }
