--- a/assets/sass/components/_articles-slider.scss
+++ b/assets/sass/components/_articles-slider.scss
@@ -101,12 +101,12 @@
   }
 }
 .title-animation {
-  animation-name: animate-content;
-  animation-duration: 0.8s;
+  // animation-name: animate-content;
+  // animation-duration: 0.8s;
 }
 .content-animation {
-  animation-name: animate-button;
-  animation-duration: 1s;
+  // animation-name: animate-button;
+  // animation-duration: 1s;
 }
 
 @keyframes animate-content {
